# MongoMacApp

./: CLAUDE.md  README.md  package-lock.json  package.json  vitest.config.harness.ts
docs/: logging.md
docs/superpowers/: CODE_REVIEW.md
runner/: cli.js  harness.js  logger.js  package.json
runner/__tests__/: harness.test.js  logger.test.js
src/: App.tsx  ipc.ts  main.tsx  types.ts  vite-env.d.ts
src-tauri/: Cargo.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: keychain.rs  main.rs  mongo.rs  state.rs
src-tauri/src/commands/: ai.rs  collection.rs  connection.rs  document.rs  logging.rs  mod.rs  saved_script.rs  script.rs
src-tauri/src/db/: mod.rs
src-tauri/src/logger/: mod.rs  redact.rs  retention.rs  tracing_impl.rs
src-tauri/src/runner/: executor.rs  mod.rs
src/__tests__/: cell-selection-context.test.tsx  connection-panel.test.tsx  connection-tree.test.tsx  context-menu.test.tsx  editor-area.test.tsx  inline-cell.test.tsx  keyboard-service.test.ts  layout.test.tsx  logger-console.test.ts  logger-index.test.tsx  logger-ipc.test.ts  logger-memory.test.ts  record-modal.test.tsx  results-panel.test.tsx  saved-scripts.test.tsx  store.test.ts  table-view-selection.test.tsx  types.test.ts
src/contexts/: CellSelectionContext.tsx
src/execution-modes/: full-script.ts  index.ts  registry.ts  smart.ts  types.ts
src/hooks/: useCellShortcuts.ts  useScriptEvents.ts  useTabActions.ts  useTableActions.ts
src/services/: KeyboardService.ts
src/settings/: SettingsView.tsx
src/shortcuts/: defaults.ts
(+63 files in other folders)
