[package]
name = "mongo-lens"
version = "0.1.0"
description = "A native Mac MongoDB client"
authors = ["Mongo Lens"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
mongodb = "3"
tokio = { version = "1", features = ["full"] }
security-framework = "2.11"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1"
futures-util = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"
sha2 = "0.10"
hex = "0.4"

[dev-dependencies]
tempfile = "3"
filetime = "0.2"

[[bin]]
name = "mongo-lens"
path = "src/main.rs"
